--- a/.ci_support/osx_target_platformosx-64.yaml
+++ b/.ci_support/osx_target_platformosx-64.yaml
@@ -1,3 +1,5 @@
+MACOSX_DEPLOYMENT_TARGET:
+- '10.9'
 build_number_decrement:
 - '0'
 channel_sources:
@@ -7,11 +9,15 @@ channel_targets:
 cran_mirror:
 - https://cran.r-project.org
 docker_image:
-- condaforge/linux-anvil-comp7
+- condaforge/linux-anvil
+macos_machine:
+- x86_64-apple-darwin13.4.0
+macos_min_version:
+- '10.9'
 pin_run_as_build:
   r-base:
     max_pin: x.x.x
 r_base:
 - 3.5.1
 target_platform:
-- linux-64
+- osx-64
